fixed layout issues

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@
   margin-bottom: 40px;
 }
 #nextParagraph{
-  margin-top: 160px;
+  margin-top: 180px;
 }
 
 #references{
